Fix title header overflow
Make header H1 show big on big screen and small on small screen so the header doesn't break
Remove the user name for survey but show on admin
fixes #574 fixes #448

--- a/packages/evolution-legacy/src/styles/survey/_admin.scss
+++ b/packages/evolution-legacy/src/styles/survey/_admin.scss
@@ -347,3 +347,10 @@ table {
   width: 100%;
   height: 100%;
 }
+
+// Show the user name in the top header
+header {
+  #item-nav-user {
+    display: block;
+  }
+}
